--- a/ClientApp/app/components/app/app.component.html
+++ b/ClientApp/app/components/app/app.component.html
@@ -1,10 +1,14 @@
 <div class='container-fluid'>
+    <div class="page-header">
+        <h1>Simplify your links</h1>
+    </div>
     <div class='row'>
-        <div class='col-sm-3'>
+        <!--<div class='col-sm-3'>
             <nav-menu></nav-menu>
-        </div>
-        <div class='col-sm-9 body-content'>
-            <router-outlet></router-outlet>
-        </div>
+        </div>-->
+
+    <div class='col-sm-12 body-content'>
+        <router-outlet></router-outlet>
+    </div>
     </div>
 </div>
