simple history page with navigation from home page

--- a/ClientApp/app/components/shortener/shortener.component.html
+++ b/ClientApp/app/components/shortener/shortener.component.html
@@ -7,6 +7,6 @@
                 <button class="btn btn-success" type="button">Make it cool!</button>
             </span>
         </div>
-        <a href="#" class="btn btn-link">History...</a>
+        <a [routerLink]="['/history']" class="btn btn-link">History...</a>
     </div>
 </div>
