--- a/ClientApp/app/components/urlshistory/urlshistory.component.html
+++ b/ClientApp/app/components/urlshistory/urlshistory.component.html
@@ -17,7 +17,7 @@
         <tbody>
             <tr *ngFor="let url of urls">
                 <td><a href={{url.url}}>{{ url.url }}</a></td>
-                <td><a href={{url.shortUrl}}>{{ url.shortUrl }}</a></td>
+                <td><a href={{url.shortUrlSuffix}}>{{ url.shortUrlSuffix }}</a></td>
                 <td>{{ url.createDate | date:'medium' }}</td>
             </tr>
         </tbody>
